<?xml version="1.0"?>
<package>
  <name>dumpbot_core</name>
  <version>0.0.2</version>
  <description>Metapackage for Dumpbot software</description>

  <maintainer email="1271087623@qq.com">Carl</maintainer>
  <author email="1271087623@qq.com">Carl</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dumpbot</run_depend>
  <run_depend>dumpbot_searial_func</run_depend>
  <run_depend>dumpbot_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
