<?xml version="1.0"?>
<package>
  <name>dumpbot_msgs</name>
  <version>0.0.2</version>
  <description>Dumpbot messages</description>

  <author email="1271087623@qq.com">Carl</author>
  <maintainer email="1271087623@qq.com">Carl</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
